# python-ai-project

./: README.md  pyproject.toml
learning/week1/: ArgsAndKwargs.py  Database-operation.py  DecoratorsTest.py  FunctionArguments.py  Generators.py  InputOutput.py  Lambda.py  PythonFunctions.py  Recursion.py  Scope.py  test-package
learning/week1/math_operations/: __init__.py
learning/week1/math_operations/advanced/: __init__.py
learning/week1/module/: Test-moule.py  calc.py
src/: main.py  testFunction.py
src/python_ai_project/: main.py
